Add send email flow
